name: path
synopsis: Strongly typed cross-platform path combinators
version: 0.1.0.0

category: System
description:
    This package builds on the best ideas from the <system-filepath>,
    <pathtype> and <posix-paths> packages, adding further improvements using
    modern GHC extensions for type-level programming and established patterns
    for high-performance Haskell.

author: Dag Odenhall
license-file: LICENSE
license: BSD3
maintainer: dag.odenhall@gmail.com

build-type: Simple
cabal-version: >=1.10

LIBRARY
    exposed-modules: System.Path.Internal
    exposed-modules: System.Path

    other-extensions: DataKinds
    other-extensions: GADTs
    other-extensions: KindSignatures
    other-extensions: LambdaCase
    other-extensions: OverloadedStrings
    other-extensions: PolyKinds
    other-extensions: StandaloneDeriving
    other-extensions: TypeOperators

    build-depends: base >=4.6 && <4.7
    build-depends: bytestring >=0.10 && <0.11
    build-depends: text >=0.11 && <0.12
    build-depends: text-locale-encoding >=0.1 && <0.2
    build-depends: unix >=2.6 && <2.7

    ghc-options: -Wall
    ghc-options: -fwarn-tabs

    hs-source-dirs: src
    default-language: Haskell2010
