name: path
synopsis: Strongly typed cross-platform path combinators
version: 0.1.0.0

category: System
description:
    This package builds on the best ideas from the <system-filepath>,
    <pathtype> and <posix-paths> packages, adding further improvements using
    modern GHC extensions for type-level programming and established patterns
    for high-performance Haskell.

author: Dag Odenhall
license-file: LICENSE
license: BSD3
maintainer: dag.odenhall@gmail.com

build-type: Simple
cabal-version: >=1.10

FLAG posix
    default: True
    description: Enable POSIX enhancements if possible
    manual: True

LIBRARY
    exposed-modules: Data.Path.Internal
    exposed-modules: Data.Path

    other-extensions: CPP
    other-extensions: DataKinds
    other-extensions: ExplicitNamespaces
    other-extensions: GADTs
    other-extensions: GeneralizedNewtypeDeriving
    other-extensions: KindSignatures
    other-extensions: OverloadedStrings
    other-extensions: StandaloneDeriving
    other-extensions: Trustworthy
    other-extensions: TypeOperators

    build-depends: base >=4.6 && <4.7
    build-depends: bytestring >=0.10 && <0.11
    build-depends: text >=0.11 && <0.12
    build-depends: text-locale-encoding >=0.1 && <0.2

    if flag(posix) && !os(windows)
        build-depends: posix-paths >=0.1 && <0.2
        build-depends: unix >=2.6 && <2.7
        cpp-options: -D__POSIX__
    else
        build-depends: directory >=1.2 && <1.3
        build-depends: filepath >=1.3 && <1.4

    if os(windows)
        cpp-options: -D__WINDOWS__

    ghc-options: -Wall
    ghc-options: -fwarn-tabs

    hs-source-dirs: src
    default-language: Haskell2010
