name: path
synopsis: Strongly typed cross-platform path combinators
version: 0.1.0.0

category: System
description:
    This package builds on the best ideas from the <system-filepath>,
    <pathtype> and <posix-paths> packages, adding further improvements using
    modern GHC extensions for type-level programming and established patterns
    for high-performance Haskell.

author: Dag Odenhall
license-file: LICENSE
license: BSD3
maintainer: dag.odenhall@gmail.com

build-type: Simple
cabal-version: >=1.10

bug-reports: https://github.com/dag/path/issues
homepage: https://github.com/dag/path

SOURCE-REPOSITORY head
    location: git://github.com/dag/path.git
    type: git

FLAG posix
    default: True
    description: Enable POSIX enhancements if possible
    manual: True

LIBRARY
    exposed-modules: System.Path
    exposed-modules: System.Path.Core
    exposed-modules: System.Path.Internal
    exposed-modules: System.PathName
    exposed-modules: System.PathName.Internal

    other-extensions: ConstraintKinds
    other-extensions: CPP
    other-extensions: DataKinds
    other-extensions: ExplicitNamespaces
    other-extensions: GADTs
    other-extensions: GeneralizedNewtypeDeriving
    other-extensions: OverloadedStrings
    other-extensions: Safe
    other-extensions: StandaloneDeriving
    other-extensions: Trustworthy
    other-extensions: TypeFamilies
    other-extensions: TypeOperators
    other-extensions: Unsafe

    build-depends: base >=4.6 && <4.7
    build-depends: bytestring >=0.10 && <0.11
    build-depends: text >=0.11 && <0.12
    build-depends: text-locale-encoding >=0.1 && <0.2
    build-depends: time >=1.4 && <1.5

    if flag(posix) && !os(windows)
        build-depends: posix-paths >=0.1 && <0.2
        build-depends: unix >=2.6 && <2.7
        cpp-options: -D__POSIX__
    else
        build-depends: directory >=1.2 && <1.3
        build-depends: filepath >=1.3 && <1.4

    if os(windows)
        cpp-options: -D__WINDOWS__

    ghc-options: -Wall
    ghc-options: -fwarn-tabs

    default-language: Haskell2010
    hs-source-dirs: src

TEST-SUITE hspec
    main-is: hspec.hs
    type: exitcode-stdio-1.0

    build-depends: base
    build-depends: hspec >=1.7 && <1.8
    build-depends: path
    build-depends: QuickCheck >=2.6 && <2.7
    build-depends: quickcheck-instances >=0.3 && <0.4
    build-depends: tagged >=0.6 && <0.7

    ghc-options: -Wall
    ghc-options: -fwarn-tabs

    default-language: Haskell2010
    hs-source-dirs: test

TEST-SUITE hspec-posix
    main-is: hspec.hs
    type: exitcode-stdio-1.0

    if os(windows)
        buildable: False
    else
        build-depends: base
        build-depends: bytestring
        build-depends: hspec
        build-depends: posix-paths >=0.1 && <0.2
        build-depends: QuickCheck
        build-depends: quickcheck-instances
        build-depends: tagged
        build-depends: text
        build-depends: text-locale-encoding
        build-depends: time
        build-depends: unix >=2.6 && <2.7

    cpp-options: -D__POSIX__
    ghc-options: -Wall
    ghc-options: -fwarn-tabs

    default-language: Haskell2010
    hs-source-dirs: test src

TEST-SUITE hspec-non-posix
    main-is: hspec.hs
    type: exitcode-stdio-1.0

    build-depends: base
    build-depends: bytestring
    build-depends: directory >=1.2 && <1.3
    build-depends: filepath >=1.3 && <1.4
    build-depends: hspec
    build-depends: QuickCheck
    build-depends: quickcheck-instances
    build-depends: tagged
    build-depends: text
    build-depends: text-locale-encoding
    build-depends: time

    ghc-options: -Wall
    ghc-options: -fwarn-tabs

    default-language: Haskell2010
    hs-source-dirs: test src

TEST-SUITE hspec-windows
    main-is: hspec.hs
    type: exitcode-stdio-1.0

    build-depends: base
    build-depends: bytestring
    build-depends: directory >=1.2 && <1.3
    build-depends: filepath >=1.3 && <1.4
    build-depends: hspec
    build-depends: QuickCheck
    build-depends: quickcheck-instances
    build-depends: tagged
    build-depends: text
    build-depends: text-locale-encoding
    build-depends: time

    cpp-options: -D__WINDOWS__

    ghc-options: -Wall
    ghc-options: -fwarn-tabs

    default-language: Haskell2010
    hs-source-dirs: test src
